# N-Puzzles

./: AudioController.cpp  AudioController.h  CMakeLists.txt  GameBoard.qml  Highscores.qml  README.md  Settings.qml  Sound.qml  Theme.qml  Tile.qml  TilesModel.qml  gameboard.cpp  gameboard.h  gameboardmodel.cpp  gameboardmodel.h  main.cpp  recources.qrc  score.cpp  score.h
Img/Icons/pauseIcons/: linksPause.txt
Img/Icons/restartIcons/: linksRestart.txt
Img/Icons/settingsIcon/: links.txt
Img/Icons/stepsIcons/: linksSteps.txt
Img/Icons/timerIcons/: linksTimer.txt
QML/: AboutGame.qml  Background.qml  DifficultyButton.qml  GameBoard.qml  Highscores.qml  Login.qml  Main.qml  MainMenu.qml  MenuButton.qml  Pause.qml  PauseButton.qml  Profile.qml  Score.qml  ScreenSettings.qml  Settings.qml  Sound.qml  Theme.qml  Tile.qml  WinDialog.qml  readme.txt
